# windows-rs-issue-2029

./: Cargo.toml
src/: main.rs
